@@ -300,6 +300,7 @@ void CDirDoc::Rescan()
 	m_pCtxt->m_nCompMethod = mf->m_options.GetInt(OPT_CMP_METHOD);
 	m_pCtxt->m_bIgnoreSmallTimeDiff = mf->m_options.GetBool(OPT_IGNORE_SMALL_FILETIME);
 	m_pCtxt->m_bStopAfterFirstDiff = mf->m_options.GetBool(OPT_CMP_STOP_AFTER_FIRST);
+	m_pCtxt->m_nQuickCompareLimit = mf->m_options.GetInt(OPT_CMP_QUICK_LIMIT);
 	m_pCtxt->m_pCompareStats = m_pCompareStats;
 
 	// Set total items count since we don't collect items
